--- a/Config/UmbracoDeploy.config
+++ b/Config/UmbracoDeploy.config
@@ -1,6 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<environments xmlns="urn:umbracodeploy-environments" id="00000000-0000-0000-0000-000000000000" name="" alias="" type="" color="">
-  <environment type="development" name="Development" id="00000000-0000-0000-0000-000000000000">http://development</environment>
-  <environment type="staging" name="Staging" id="00000000-0000-0000-0000-000000000000">http://staging</environment>
-  <environment type="live" name="Live" id="00000000-0000-0000-0000-000000000000">http://live</environment>
+<environments xmlns="urn:umbracodeploy-environments" id="869d915a-6fe8-4dbe-a332-cca536b5fd81" name="h5yr" alias="h5yr" type="Starter" color="" url="https://www.s1.umbraco.io/project/h5yr">
+  <environment type="live" name="Live" id="fd9d076a-3b2d-4f81-9231-24f8aa0e9742">https://h5yr.s1.umbraco.io</environment>
 </environments>
