--- a/App_Data/packages/installed/installedPackages.config
+++ b/App_Data/packages/installed/installedPackages.config
@@ -1,2 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
-<packages></packages>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<packages>
+  <package id="1" version="2.0" url="http://our.umbraco.org/projects/website-utilities/utwit" name="uTwit PropertyEditor" folder="0e6f1942-5d46-4512-95ca-006e06c85111" packagepath="" repositoryGuid="65194810-1f85-11dd-bd0b-0800200c9a66" iconUrl="" umbVersion="7.12.4" packageGuid="234f5a5f-babe-4d89-b121-2818afb9448c" hasUpdate="False" enableSkins="False" skinRepoGuid="00000000-0000-0000-0000-000000000000">
+    <license url="http://opensource.org/licenses/MIT">MIT license</license>
+    <author url="http://theoutfield.net">Matt Brailsford</author>
+    <readme><![CDATA[uTwit PropertyEditor contains a Twitter OAuth property editor to provide a simple way to have clients provide the necesary details to connect to the Twitter API.]]></readme>
+    <actions>
+    </actions>
+    <datatypes>1054</datatypes>
+    <content nodeId="" loadChildNodes="False">
+    </content>
+    <templates>
+    </templates>
+    <stylesheets>
+    </stylesheets>
+    <documenttypes>
+    </documenttypes>
+    <macros>
+    </macros>
+    <files>
+      <file>/App_Plugins/uTwit/js/uTwit.js</file>
+      <file>/App_Plugins/uTwit/package.manifest</file>
+      <file>/App_Plugins/uTwit/TwitterOAuth1Callback.aspx</file>
+      <file>/App_Plugins/uTwit/views/uTwit.html</file>
+      <file>/bin/Our.Umbraco.uTwit.PropertyEditor.dll</file>
+    </files>
+    <languages>
+    </languages>
+    <dictionaryitems>
+    </dictionaryitems>
+    <loadcontrol>
+    </loadcontrol>
+  </package>
+</packages>
